[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/sfx.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/MysteryBox.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/Lighting/light.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/guns/2DMBIE arcade machine.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/Jukebox/mr sandman jukebox music.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/player/notenoughmoney.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/Jukebox/crazy jukebox music.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/Jukebox/only you jukebox music.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/Jukebox/Electrical Humming 50hz.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/scripts/lights/lightbulb_broken.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 100, 120 )

[node name="Mystery_Box" type="Node2D"]
z_index = -5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 0.42, 0.386895 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 0.44545 )
texture = ExtResource( 3 )
script = ExtResource( 10 )

[node name="buyarea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buyarea"]
shape = SubResource( 46 )

[node name="sfx" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="buy" type="Node2D" parent="sfx"]

[node name="BuySound" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 5 )
volume_db = 1.0
bus = "Soundeffects"

[node name="BuySound2" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 8 )
volume_db = 1.0
bus = "Soundeffects"

[node name="BuySound3" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 7 )
volume_db = 1.0
bus = "Soundeffects"

[node name="not_enough_money" type="Node2D" parent="sfx"]

[node name="notenoughmoney" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
bus = "Soundeffects"

[node name="notenoughmoney2" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 0.98
bus = "Soundeffects"

[node name="notenoughmoney3" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 1.03
bus = "Soundeffects"

[node name="Ambientsound" type="Node2D" parent="sfx"]

[node name="ElectricalHumming" type="AudioStreamPlayer2D" parent="sfx/Ambientsound"]
stream = ExtResource( 9 )
volume_db = 1.0
autoplay = true
max_distance = 500.0
bus = "Soundeffects"

[connection signal="play_sound" from="." to="sfx" method="_on_puck_a_panch_play_sound"]
[connection signal="timeout" from="Timer" to="Light2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="buyarea" to="." method="_on_buyarea_body_entered"]
[connection signal="body_exited" from="buyarea" to="." method="_on_buyarea_body_exited"]
